[gd_scene load_steps=4 format=3 uid="uid://u8w442a0a3b6"]

[ext_resource type="Script" path="res://components/wear_action/wear_action.gd" id="1_n2u2d"]
[ext_resource type="PackedScene" uid="uid://bubyiypl7f8gi" path="res://components/action_component/action_component.tscn" id="2_e2qv4"]
[ext_resource type="PackedScene" uid="uid://d1775i78g6ie7" path="res://components/name_attribute/name_attribute.tscn" id="3_8cy7h"]

[node name="WearAction" type="Node"]
script = ExtResource("1_n2u2d")

[node name="ActionComponent" parent="." instance=ExtResource("2_e2qv4")]

[node name="NameAttribute" parent="." instance=ExtResource("3_8cy7h")]
basic_name = "穿戴"
